PJ-669 fixed quickview z-index

--- a/app/design/frontend/peterjacksons/petertheme/web/css/modules/catalog/_catalog-main.scss
+++ b/app/design/frontend/peterjacksons/petertheme/web/css/modules/catalog/_catalog-main.scss
@@ -28,6 +28,7 @@
         &-hover {
             height: 40px;
             padding: 0;
+            z-index: 1;
         }
 
         &-link {
